# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  reset.sql
page_analyzer/: __init__.py  app.py  utils.py
page_analyzer/templates/: checks.html  index.html  not_found.html  urls.html
page_analyzer/templates/layouts/: flash.html  header.html
